<resources>
    <string name="app_name">Lifestyle Tracker (Voice-first)</string>
    <string name="app_welcome_message">
        Welcome to Lifestyle Assistant!
    </string>
    <string name="action_settings">Settings</string>
    <string name="add_item_category_placeholder">
        Getting item category
    </string>
    <string name="add_item_details_placeholder">
        Getting item details
    </string>
    <string name="title_activity_add">AddActivity</string>
    <string name="next">Next</string>
    <string name="finish">Done!</string>
    <string name="finish_message">The activity has been recorded.</string>
    <!-- Button labels -->
    <string name="navigate_to_reports_button_label">
        Reports
    </string>
    <string name="sign_out_btn_label">Sign out</string>
    <string name="sign_in_btn_label">Sign in</string>
    <!-- Fragment labels -->
    <string name="report_progress_fragment_label">
        Report Progress Fragment
    </string>
    <string name="report_result_fragment_label">
        Report Result Fragment
    </string>
    <string name="add_result_fragment_label">
        Add Result Fragment
    </string>
    <string name="add_progress_fragment_label">
        Add Progress Fragment
    </string>
    <string name="home_fragment_label">
        Home Fragment
    </string>
    <string name="settings_fragment_label">
        Settings Fragment
    </string>
    <string name="select_fragment_label">
        Select Fragment
    </string>
    <!-- Error messages -->
    <string name="uid_not_exist">
        The UID of the current user is not found.
    </string>
    <string name="no_record_information_found_in_intent">
        No record information found in the intent.
    </string>
    <string name="title_activity_show_report">ShowReportActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="previous">Previous</string>

    <!-- For in-app feature invocation -->
    <string name="settings_shortcut_short_label">
        Settings
    </string>
    <string name="settings_shortcut_long_label">
        Open settings
    </string>
    <string name="record_shortcut_short_label">
        Record
    </string>
    <string name="record_shortcut_long_label">
        Record nutrition intake
    </string>
    <string name="report_shortcut_short_label">
        Report
    </string>
    <string name="report_shortcut_long_label">
        Nutrition intake report
    </string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s
    </string>
</resources>