<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.tianhaoz95.lifestyletrackervoice_first.activities.main.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_SelectFragment"
            app:destination="@id/SelectFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.tianhaoz95.lifestyletrackervoice_first.activities.main.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_SettingsFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/SelectFragment"
        android:name="com.tianhaoz95.lifestyletrackervoice_first.activities.main.SelectFragment"
        android:label="@string/select_fragment_label"
        tools:layout="@layout/fragment_select"/>
</navigation>