<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
        This is for generic queries like "add a cup of coffee" which
        is likely requested by the user yet will need more processing
        at the app end since the name can be pretty arbitrary.

        For more details about this intent, see:
        https://developers.google.com/assistant/app/reference/built-in-intents/common/create-thing
    -->
    <capability android:name="actions.intent.CREATE_THING">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.tianhaoz95.lifestyletrackervoice_first.activities.record.AddActivity"
            android:targetPackage="com.tianhaoz95.lifestyletrackervoice_first">
            <parameter
                android:name="thing.name"
                android:key="name" />
        </intent>
    </capability>
    <!--
        This is for users that are more familiar with the health tracking
        features. For example, queries like "Record that I had a cup of
        coffee" will trigger this intent.

        For more details about this intent, see:
        https://developers.google.com/assistant/app/reference/built-in-intents/health-and-fitness/record-food-observation
    -->
    <capability android:name="actions.intent.RECORD_FOOD_OBSERVATION">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.tianhaoz95.lifestyletrackervoice_first.activities.record.AddActivity"
            android:targetPackage="com.tianhaoz95.lifestyletrackervoice_first">
            <parameter
                android:name="foodObservation.aboutFood.name"
                android:key="name" />
            <extra
                android:key="requiredForegroundActivity"
                android:value="com.tianhaoz95.lifestyletrackervoice_first/com.tianhaoz95.lifestyletrackervoice_first.main.MainActivity" />
        </intent>
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.tianhaoz95.lifestyletrackervoice_first.activities.record.AddActivity"
            android:targetPackage="com.tianhaoz95.lifestyletrackervoice_first">
            <parameter
                android:name="foodObservation.aboutFood.name"
                android:key="name" />
        </intent>
    </capability>
    <!-- For queries like "Add a cup of water" -->
    <capability android:name="actions.intent.UPDATE_ITEM_LIST">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.tianhaoz95.lifestyletrackervoice_first"
            android:targetClass="com.tianhaoz95.lifestyletrackervoice_first.activities.record.AddActivity">
            <!-- Eg. itemListName = "Grocery List" -->
            <parameter
                android:name="itemList.name"
                android:key="itemListName"/>
            <!-- Eg. itemListElementName = "Milk" -->
            <parameter
                android:name="itemList.itemListElement.name"
                android:key="itemListElementName"/>
        </intent>
    </capability>
    <!--
        This is for users to check the current intake status. For example,
        queries like "Show my water intake" will trigger this intent.

        For more details, see:
        https://developers.google.com/assistant/app/reference/built-in-intents/health-and-fitness/get-food-observation#example-queries
    -->
    <capability android:name="actions.intent.GET_FOOD_OBSERVATION">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.tianhaoz95.lifestyletrackervoice_first.activities.report.ShowReportActivity"
            android:targetPackage="com.tianhaoz95.lifestyletrackervoice_first">
            <parameter
                android:name="foodObservation.aboutNutrient.name"
                android:key="name"/>
        </intent>
    </capability>
    <!-- For opening settings -->
    <capability android:name="actions.intent.OPEN_APP_FEATURE">
        <intent
            android:targetPackage="com.tianhaoz95.lifestyletrackervoice_first"
            android:targetClass="com.tianhaoz95.lifestyletrackervoice_first.activities.main.MainActivity">
            <parameter
                android:name="feature"
                android:key="featureParam"/>
            <extra
                android:key="requiredForegroundActivity"
                android:value="com.tianhaoz95.lifestyletrackervoice_first/com.tianhaoz95.lifestyletrackervoice_first.activities.main.MainActivity" />
        </intent>
        <intent
            android:targetPackage="com.tianhaoz95.lifestyletrackervoice_first"
            android:targetClass="com.tianhaoz95.lifestyletrackervoice_first.activities.main.MainActivity">
            <parameter
                android:name="feature"
                android:key="featureParam"/>
        </intent>
    </capability>
    <!-- Inline inventory for OPEN_APP_FEATURE -->
    <shortcut
        android:shortcutId="SETTINGS"
        android:shortcutShortLabel="@string/settings_shortcut_short_label"
        android:shortcutLongLabel="@string/settings_shortcut_long_label">
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="@array/settings_feature_names" />
        </capability-binding>
    </shortcut>
    <shortcut
        android:shortcutId="RECORD"
        android:shortcutShortLabel="@string/record_shortcut_short_label"
        android:shortcutLongLabel="@string/record_shortcut_long_label">
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="@array/record_feature_names" />
        </capability-binding>
    </shortcut>
    <shortcut
        android:shortcutId="REPORT"
        android:shortcutShortLabel="@string/report_shortcut_short_label"
        android:shortcutLongLabel="@string/report_shortcut_long_label">
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="@array/report_feature_names" />
        </capability-binding>
    </shortcut>
</shortcuts>